<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/nav_graph"
    app:startDestination="@id/SearchFragment">

    <fragment
        android:id="@+id/SearchFragment"
        android:name="com.functional.mom.presentation.SearchFragment"
        android:label="@string/search_fragment_label"
        tools:layout="@layout/fragment_search">

        <action
            android:id="@+id/action_SearchFragment_to_ProductsFragment"
            app:destination="@id/ProductsFragment" />
        <action
            android:id="@+id/action_SearchFragment_to_DetailFragment"
            app:destination="@id/DetailFragment" />
    </fragment>
    <fragment
        android:id="@+id/ProductsFragment"
        android:name="com.functional.mom.presentation.ProductsFragment"
        android:label="@string/products_fragment_label"
        tools:layout="@layout/fragment_products">

        <action
            android:id="@+id/action_ProductsFragment_to_SearchFragment"
            app:destination="@id/SearchFragment" />
        <action
            android:id="@+id/action_ProductsFragment_to_DetailFragment"
            app:destination="@id/DetailFragment" />
    </fragment>
    <fragment
        android:id="@+id/DetailFragment"
        android:name="com.functional.mom.presentation.DetailFragment"
        android:label="@string/detail_fragment_label"
        tools:layout="@layout/fragment_detail">
        <action
            android:id="@+id/action_DetailFragment_to_ProductsFragment"
            app:destination="@id/ProductsFragment" />
        <action
            android:id="@+id/action_DetailFragment_to_SearchFragment"
            app:destination="@id/SearchFragment" />
        <argument
            android:name="product"
            android:defaultValue="@null"
            app:argType="com.functional.mom.repository.models.ResultsModel"
            app:nullable="true" />
    </fragment>
</navigation>
